Backend code cleanup